testsuite/tests/properties/invalid_super/overridden_abstract/test.lkt
import common

class FooNode implements Node[FooNode] {
    @exported @abstract fun p(): Int
}

class Example: FooNode implements TokenNode {
    @exported fun p(): Int = node.super() + 1
}

class Number: FooNode implements TokenNode {
    @exported fun p(): Int = 0
}
